# backend/docs/openapi.yaml
@@ -140,15 +140,27 @@ paths:
           description: Search for tasks by keyword
           schema:
             type: string
+        - name: page
+          in: query
+          description: Page number
+          schema:
+            type: integer
       responses:
         '200':
           description: A list of tasks
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Task'
+                type: object
+                properties:
+                  tasks:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Task'
+                  total_record:
+                    type: integer
+                  total_page:
+                    type: integer
     post:
       summary: Create a new task
       requestBody:
